--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/mobile.css" />
   </head>
   <body>
     <nav
@@ -606,8 +607,8 @@
               ></div>
               <div class="relative z-10">
                 <img
-                  src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=600&h=400&fit=crop"
-                  alt="Fast Results"
+                  src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?w=600&h=400&fit=crop"
+                  alt="Tezkor Natija"
                   class="w-full h-32 object-cover rounded-lg mb-6 group-hover:scale-105 transition-transform duration-300"
                 />
                 <h3 class="text-xl font-bold mb-3 text-black">Tezkor Natija</h3>
@@ -628,8 +629,8 @@
               ></div>
               <div class="relative z-10">
                 <img
-                  src="https://images.unsplash.com/photo-1552521514-5fefe8c9ef14?w=600&h=400&fit=crop"
-                  alt="Premium Quality"
+                  src="https://images.unsplash.com/photo-1553729459-efe14ef6055d?w=600&h=400&fit=crop"
+                  alt="Premium Sifat"
                   class="w-full h-32 object-cover rounded-lg mb-6 group-hover:scale-105 transition-transform duration-300"
                 />
                 <h3 class="text-xl font-bold mb-3 text-black">Premium Sifat</h3>
@@ -650,8 +651,8 @@
               ></div>
               <div class="relative z-10">
                 <img
-                  src="https://images.unsplash.com/photo-1552666731-f7b2e0e24b2d?w=600&h=400&fit=crop"
-                  alt="Trusted Partner"
+                  src="https://images.unsplash.com/photo-1521791136064-7986c2920216?w=600&h=400&fit=crop"
+                  alt="Ishonchli Hamkor"
                   class="w-full h-32 object-cover rounded-lg mb-6 group-hover:scale-105 transition-transform duration-300"
                 />
                 <h3 class="text-xl font-bold mb-3 text-black">
@@ -674,8 +675,8 @@
               ></div>
               <div class="relative z-10">
                 <img
-                  src="https://images.unsplash.com/photo-1552627881-e59a81c5d75b?w=600&h=400&fit=crop"
-                  alt="Expert Team"
+                  src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=600&h=400&fit=crop"
+                  alt="Mutaxassis Jamoa"
                   class="w-full h-32 object-cover rounded-lg mb-6 group-hover:scale-105 transition-transform duration-300"
                 />
                 <h3 class="text-xl font-bold mb-3 text-black">
@@ -698,8 +699,8 @@
               ></div>
               <div class="relative z-10">
                 <img
-                  src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=600&h=400&fit=crop"
-                  alt="24/7 Support"
+                  src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=600&h=400&fit=crop"
+                  alt="24/7 Qo'llab-quvvatlash"
                   class="w-full h-32 object-cover rounded-lg mb-6 group-hover:scale-105 transition-transform duration-300"
                 />
                 <h3 class="text-xl font-bold mb-3 text-black">
@@ -722,8 +723,8 @@
               ></div>
               <div class="relative z-10">
                 <img
-                  src="https://images.unsplash.com/photo-1552521514-5fefe8c9ef14?w=600&h=400&fit=crop"
-                  alt="Proven Results"
+                  src="https://images.unsplash.com/photo-1554224154-26032ffc0d07?w=600&h=400&fit=crop"
+                  alt="Sertifikatsiya Olgan"
                   class="w-full h-32 object-cover rounded-lg mb-6 group-hover:scale-105 transition-transform duration-300"
                 />
                 <h3 class="text-xl font-bold mb-3 text-black">
