--- a/frontend/index.html
+++ b/frontend/index.html
@@ -202,7 +202,7 @@
                   <div
                     class="text-[10px] text-gray-600 uppercase leading-tight"
                   >
-                    Onlayn<br />Qo'llab
+                    Onlayn<br />Qo'llab Quvvatlash
                   </div>
                 </div>
               </div>
@@ -274,6 +274,14 @@
         <div
           class="scroller-inner text-4xl font-black uppercase tracking-tighter flex space-x-12"
         >
+          <span>Buxgalteriya •</span> <span>Brokerlik •</span>
+          <span>IT Xizmatlari •</span> <span>Malakasini Oshirish •</span>
+          <span>Litsenziya Yordam •</span> <span>Energiya Audit •</span>
+          <span>Marketing & Sotuv •</span>
+          <span>Buxgalteriya •</span> <span>Brokerlik •</span>
+          <span>IT Xizmatlari •</span> <span>Malakasini Oshirish •</span>
+          <span>Litsenziya Yordam •</span> <span>Energiya Audit •</span>
+          <span>Marketing & Sotuv •</span>
           <span>Buxgalteriya •</span> <span>Brokerlik •</span>
           <span>IT Xizmatlari •</span> <span>Malakasini Oshirish •</span>
           <span>Litsenziya Yordam •</span> <span>Energiya Audit •</span>
