--- a/frontend/index.html
+++ b/frontend/index.html
@@ -383,12 +383,10 @@
                   alt="HR"
                 />
               </div>
-              <h3 class="text-4xl font-bold mb-4 uppercase">
-                Malakasini Oshirish
-              </h3>
+              <h3 class="text-3xl font-bold mb-4 uppercase">Malaka Oshirish</h3>
               <p class="text-gray-400 text-sm leading-relaxed mb-6">
-                Xodimlaringizni professional darajaga ko'tarish uchun tayyorlash
-                va malaka shaklantirish programmalari.
+                Xodimlarni professional darajaga ko'tarish va malaka
+                shaklantirish programmalari.
               </p>
               <a
                 href="#boglanish"
