--- a/frontend/index.html
+++ b/frontend/index.html
@@ -441,31 +441,104 @@
           </div>
 
           <div
-            class="mt-20 group premium-card p-12 lg:p-24 flex flex-col lg:flex-row items-center gap-16"
+            class="mt-20 group relative p-10 lg:p-16 flex flex-col lg:flex-row items-center gap-10 rounded-3xl overflow-hidden bg-white border-2 border-red-100 shadow-2xl"
           >
-            <span class="card-number">07</span>
-            <div class="flex-1">
-              <h3 class="text-6xl lg:text-8xl font-black uppercase mb-8">
+            <!-- Decorative elements -->
+            <div
+              class="absolute top-0 right-0 w-80 h-80 bg-red-50 rounded-full -mr-20 -mt-20"
+            ></div>
+            <div
+              class="absolute bottom-0 left-0 w-60 h-60 bg-red-100/50 rounded-full -ml-16 -mb-16"
+            ></div>
+            <div
+              class="absolute top-1/2 right-1/3 w-2 h-32 bg-red-600 opacity-10 rotate-12"
+            ></div>
+
+            <div class="flex-1 relative z-10">
+              <div
+                class="inline-flex items-center gap-2 px-5 py-2 bg-red-600 rounded-full mb-6 shadow-lg"
+              >
+                <i class="fas fa-star text-white text-xs"></i>
+                <span
+                  class="text-white text-sm font-bold uppercase tracking-widest"
+                  >Premium Xizmat</span
+                >
+              </div>
+              <h3
+                class="text-4xl lg:text-6xl font-black uppercase mb-6 text-gray-900 leading-tight"
+              >
                 Marketing <br />
-                & <span class="text-red-600 glow-text">Sotuv</span>
+                & <span class="text-red-600">Sotuv</span>
               </h3>
               <p
-                class="text-xl text-gray-400 max-w-xl mb-12 italic border-l-4 border-red-600 pl-6"
+                class="text-lg text-gray-600 max-w-xl mb-8 leading-relaxed border-l-4 border-red-600 pl-6"
               >
-                "Biz biznesingizni nafaqat ko'rsatamiz, balki uni bozordagi
-                yetakchiga aylantiramiz."
+                Biz biznesingizni nafaqat ko'rsatamiz, balki uni bozordagi
+                yetakchiga aylantiramiz. Professional marketing strategiyasi
+                bilan sotuvingizni
+                <strong class="text-red-600">3x</strong> oshiring.
               </p>
+              <div class="flex flex-wrap gap-6 mb-8">
+                <div
+                  class="flex items-center gap-3 bg-gray-50 px-4 py-3 rounded-xl"
+                >
+                  <img
+                    src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?w=60&h=60&fit=crop"
+                    class="w-10 h-10 rounded-lg object-cover"
+                    alt="SMM"
+                  />
+                  <span class="text-sm font-bold text-gray-800"
+                    >SMM strategiya</span
+                  >
+                </div>
+                <div
+                  class="flex items-center gap-3 bg-gray-50 px-4 py-3 rounded-xl"
+                >
+                  <img
+                    src="https://images.unsplash.com/photo-1558655146-9f40138edfeb?w=60&h=60&fit=crop"
+                    class="w-10 h-10 rounded-lg object-cover"
+                    alt="Brending"
+                  />
+                  <span class="text-sm font-bold text-gray-800">Brending</span>
+                </div>
+                <div
+                  class="flex items-center gap-3 bg-gray-50 px-4 py-3 rounded-xl"
+                >
+                  <img
+                    src="https://images.unsplash.com/photo-1563986768609-322da13575f3?w=60&h=60&fit=crop"
+                    class="w-10 h-10 rounded-lg object-cover"
+                    alt="Reklama"
+                  />
+                  <span class="text-sm font-bold text-gray-800">Reklama</span>
+                </div>
+              </div>
               <a
                 href="#boglanish"
-                class="inline-block bg-white text-black px-16 py-6 font-black uppercase hover:bg-red-600 hover:text-white transition-all"
+                class="inline-flex items-center gap-3 bg-red-600 text-white px-8 py-4 font-bold uppercase rounded-full hover:bg-red-700 hover:shadow-xl hover:-translate-y-1 transition-all duration-300"
               >
                 Sotuvni Boshlash
+                <svg
+                  class="w-5 h-5"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M17 8l4 4m0 0l-4 4m4-4H3"
+                  ></path>
+                </svg>
               </a>
             </div>
-            <div class="flex-1 h-[400px] w-full">
+            <div class="flex-1 h-[320px] w-full relative">
+              <div
+                class="absolute -inset-4 bg-red-600 rounded-2xl rotate-3 opacity-10"
+              ></div>
               <img
                 src="https://images.unsplash.com/photo-1533750349088-cd871a92f312?auto=format&fit=crop&q=80&w=800"
-                class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700"
+                class="w-full h-full object-cover rounded-2xl shadow-2xl relative z-10 group-hover:scale-[1.02] transition duration-500"
                 alt="Marketing"
               />
             </div>
@@ -888,35 +961,191 @@
       </section>
     </main>
 
-    <footer
-      class="p-20 border-t border-gray-200 text-center text-sm font-medium tracking-[0.5em] text-gray-600 bg-white"
-    >
-      <div class="mb-8">
-        <a href="#asosiy" class="text-3xl font-bold syncopate text-black"
-          >MAG'ZUNA CONSULT<span class="text-red-600 glow-text">.</span></a
+    <footer class="bg-gray-900 text-white">
+      <!-- Main Footer -->
+      <div class="max-w-[1600px] mx-auto px-6 py-16">
+        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-12">
+          <!-- Company Info -->
+          <div>
+            <a
+              href="#asosiy"
+              class="text-2xl font-bold syncopate text-white mb-6 inline-block"
+            >
+              MAG'ZUNA<span class="text-red-500">.</span>
+            </a>
+            <p class="text-gray-400 mb-6 leading-relaxed">
+              O'zbekistonning yetakchi konsalting kompaniyasi. 10+ yillik
+              tajriba bilan biznesingizni yangi cho'qqilarga olib chiqamiz.
+            </p>
+            <div class="flex gap-4">
+              <a
+                href="https://t.me/yourusername"
+                class="w-10 h-10 bg-gray-800 rounded-full flex items-center justify-center hover:bg-red-600 transition-all duration-300"
+              >
+                <i class="fab fa-telegram"></i>
+              </a>
+              <a
+                href="https://instagram.com/yourusername"
+                class="w-10 h-10 bg-gray-800 rounded-full flex items-center justify-center hover:bg-red-600 transition-all duration-300"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a
+                href="https://facebook.com/yourusername"
+                class="w-10 h-10 bg-gray-800 rounded-full flex items-center justify-center hover:bg-red-600 transition-all duration-300"
+              >
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a
+                href="https://linkedin.com/company/yourusername"
+                class="w-10 h-10 bg-gray-800 rounded-full flex items-center justify-center hover:bg-red-600 transition-all duration-300"
+              >
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </div>
+          </div>
+
+          <!-- Quick Links -->
+          <div>
+            <h4 class="text-lg font-bold uppercase mb-6 text-white">
+              Tezkor Havolalar
+            </h4>
+            <ul class="space-y-3">
+              <li>
+                <a
+                  href="#asosiy"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Asosiy</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#xizmatlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Xizmatlar</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#yutuqlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Yutuqlarimiz</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#biz-haqimizda"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Biz haqimizda</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#boglanish"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Bog'lanish</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Services -->
+          <div>
+            <h4 class="text-lg font-bold uppercase mb-6 text-white">
+              Xizmatlar
+            </h4>
+            <ul class="space-y-3">
+              <li>
+                <a
+                  href="#xizmatlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Buxgalteriya</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#xizmatlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Brokerlik</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#xizmatlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >IT Xizmatlari</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#xizmatlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Malaka Oshirish</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#xizmatlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Marketing & Sotuv</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Contact Info -->
+          <div>
+            <h4 class="text-lg font-bold uppercase mb-6 text-white">Aloqa</h4>
+            <ul class="space-y-4">
+              <li class="flex items-start gap-3">
+                <i class="fas fa-map-marker-alt text-red-500 mt-1"></i>
+                <span class="text-gray-400"
+                  >Toshkent sh., Chilonzor tumani, Bunyodkor ko'chasi 15</span
+                >
+              </li>
+              <li class="flex items-center gap-3">
+                <i class="fas fa-phone text-red-500"></i>
+                <a
+                  href="tel:+998901234567"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >+998 90 123 45 67</a
+                >
+              </li>
+              <li class="flex items-center gap-3">
+                <i class="fas fa-envelope text-red-500"></i>
+                <a
+                  href="mailto:info@magzuna.uz"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >info@magzuna.uz</a
+                >
+              </li>
+              <li class="flex items-center gap-3">
+                <i class="fas fa-clock text-red-500"></i>
+                <span class="text-gray-400">Dush-Jum: 9:00 - 18:00</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottom Footer -->
+      <div class="border-t border-gray-800">
+        <div
+          class="max-w-[1600px] mx-auto px-6 py-6 flex flex-col md:flex-row justify-between items-center gap-4"
         >
+          <p class="text-gray-500 text-sm">
+            © 2026 Mag'zuna Consult. Barcha huquqlar himoyalangan.
+          </p>
+          <div class="flex gap-6 text-sm">
+            <a href="#" class="text-gray-500 hover:text-red-500 transition"
+              >Maxfiylik siyosati</a
+            >
+            <a href="#" class="text-gray-500 hover:text-red-500 transition"
+              >Foydalanish shartlari</a
+            >
+          </div>
+        </div>
       </div>
-      <div class="flex justify-center gap-8 mb-8 text-2xl">
-        <a
-          href="https://t.me/yourusername"
-          class="hover:text-red-600 transition"
-          ><i class="fab fa-telegram"></i
-        ></a>
-        <a
-          href="https://instagram.com/yourusername"
-          class="hover:text-red-600 transition"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="mailto:info@magzuna.uz" class="hover:text-red-600 transition"
-          ><i class="fas fa-envelope"></i
-        ></a>
-        <a href="tel:+998901234567" class="hover:text-red-600 transition"
-          ><i class="fas fa-phone"></i
-        ></a>
-      </div>
-      <p class="text-gray-500">
-        © 2026 MAGZUNA CONSULT | PREMIUM KONSALTING XIZMATLARI
-      </p>
     </footer>
 
     <!-- Login Modal -->
