--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MAG'ZUNA | Premium Konsalting</title>
+    <title>Mag'zuna | Consult</title>
+
+    <!-- Favicon - Dumaloq -->
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='50' fill='%23dc2626'/><text x='50' y='62' font-size='32' font-weight='bold' text-anchor='middle' fill='white'>MC</text></svg>"
+    />
+    <link rel="apple-touch-icon" href="./assets/images/logo.png" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -971,7 +978,7 @@
               href="#asosiy"
               class="text-2xl font-bold syncopate text-white mb-6 inline-block"
             >
-              MAG'ZUNA<span class="text-red-500">.</span>
+              MAG'ZUNA CONSULT<span class="text-red-500">.</span>
             </a>
             <p class="text-gray-400 mb-6 leading-relaxed">
               O'zbekistonning yetakchi konsalting kompaniyasi. 10+ yillik
@@ -1081,6 +1088,20 @@
                   href="#xizmatlar"
                   class="text-gray-400 hover:text-red-500 transition"
                   >Malaka Oshirish</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#xizmatlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Litsenziya Yordam</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#xizmatlar"
+                  class="text-gray-400 hover:text-red-500 transition"
+                  >Energiya Audit</a
                 >
               </li>
               <li>
