--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1094,7 +1094,7 @@
                 <a
                   href="#xizmatlar"
                   class="text-gray-400 hover:text-red-500 transition"
-                  >Litsenziya Yordam</a
+                  >Litsenziyaga Yordam</a
                 >
               </li>
               <li>
