--- a/frontend/index.html
+++ b/frontend/index.html
@@ -194,40 +194,62 @@
         </div>
 
         <!-- Mobile Language Selector (in navbar) -->
-        <div class="lg:hidden flex items-center gap-2 mr-2">
+        <div class="lg:hidden relative mr-2">
           <button
-            onclick="setLanguage('uz')"
-            class="mobile-nav-lang-btn w-8 h-8 rounded-full overflow-hidden border-2 border-white/30 hover:border-white transition-all"
-            title="O'zbekcha"
+            id="mobileLangBtn"
+            class="flex items-center justify-center w-10 h-10 rounded-full bg-white/10 hover:bg-white/20 transition-all"
+            title="Tilni tanlash"
           >
-            <img
-              src="https://flagcdn.com/w40/uz.png"
-              alt="UZ"
-              class="w-full h-full object-cover"
-            />
+            <i class="fas fa-globe text-white text-lg"></i>
           </button>
-          <button
-            onclick="setLanguage('ru')"
-            class="mobile-nav-lang-btn w-8 h-8 rounded-full overflow-hidden border-2 border-white/30 hover:border-white transition-all"
-            title="Русский"
+          <!-- Mobile Language Dropdown -->
+          <div
+            id="mobileLangDropdown"
+            class="hidden absolute right-0 top-12 bg-white rounded-xl shadow-xl py-2 min-w-[140px] z-50"
           >
-            <img
-              src="https://flagcdn.com/w40/ru.png"
-              alt="RU"
-              class="w-full h-full object-cover"
-            />
-          </button>
-          <button
-            onclick="setLanguage('en')"
-            class="mobile-nav-lang-btn w-8 h-8 rounded-full overflow-hidden border-2 border-white/30 hover:border-white transition-all"
-            title="English"
-          >
-            <img
-              src="https://flagcdn.com/w40/gb.png"
-              alt="EN"
-              class="w-full h-full object-cover"
-            />
-          </button>
+            <button
+              onclick="
+                setLanguage('uz');
+                closeMobileLangDropdown();
+              "
+              class="mobile-lang-option w-full flex items-center gap-3 px-4 py-2 hover:bg-gray-100 transition-colors"
+            >
+              <img
+                src="https://flagcdn.com/w20/uz.png"
+                alt="UZ"
+                class="w-5 h-4 object-cover rounded"
+              />
+              <span class="text-gray-700 font-medium">O'zbekcha</span>
+            </button>
+            <button
+              onclick="
+                setLanguage('ru');
+                closeMobileLangDropdown();
+              "
+              class="mobile-lang-option w-full flex items-center gap-3 px-4 py-2 hover:bg-gray-100 transition-colors"
+            >
+              <img
+                src="https://flagcdn.com/w20/ru.png"
+                alt="RU"
+                class="w-5 h-4 object-cover rounded"
+              />
+              <span class="text-gray-700 font-medium">Русский</span>
+            </button>
+            <button
+              onclick="
+                setLanguage('en');
+                closeMobileLangDropdown();
+              "
+              class="mobile-lang-option w-full flex items-center gap-3 px-4 py-2 hover:bg-gray-100 transition-colors"
+            >
+              <img
+                src="https://flagcdn.com/w20/gb.png"
+                alt="EN"
+                class="w-5 h-4 object-cover rounded"
+              />
+              <span class="text-gray-700 font-medium">English</span>
+            </button>
+          </div>
         </div>
 
         <button
@@ -1815,14 +1837,14 @@
             <label
               class="block text-sm font-bold text-gray-700 mb-2"
               data-lang-key="auth_name"
-              >Ismi</label
+              >To'liq ism</label
             >
             <input
               type="text"
               id="registerName"
               required
               class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-red-600 focus:outline-none transition"
-              placeholder="Sizning ismingiz"
+              placeholder="Familiya Ism"
             />
           </div>
 
@@ -1861,6 +1883,22 @@
             >
               Kamida 6 ta belgi
             </p>
+          </div>
+
+          <div>
+            <label
+              class="block text-sm font-bold text-gray-700 mb-2"
+              data-lang-key="auth_confirm_password"
+              >Parolni tasdiqlang</label
+            >
+            <input
+              type="password"
+              id="registerConfirmPassword"
+              required
+              minlength="6"
+              class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-red-600 focus:outline-none transition"
+              placeholder="••••••••"
+            />
           </div>
 
           <div
