--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,10 +16,13 @@
     <meta name="msapplication-TileColor" content="#dc2626" />
     <title>Mag'zuna | Consult</title>
 
-    <!-- Favicon - Dumaloq -->
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
     <link
       rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='50' fill='%23dc2626'/><text x='50' y='62' font-size='32' font-weight='bold' text-anchor='middle' fill='white'>MC</text></svg>"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/logo.png"
     />
     <link rel="apple-touch-icon" href="./assets/images/logo.png" />
 
