--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel - Mag'zuna Consult</title>
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
-    <link rel="apple-touch-icon" href="./assets/images/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg" />
+    <link rel="apple-touch-icon" href="./assets/images/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -40,13 +40,11 @@
           <div class="text-center mb-8">
             <!-- Logo -->
             <div
-              class="w-20 h-20 mx-auto mb-4 rounded-2xl overflow-hidden shadow-xl border-4 border-white bg-white"
+              class="w-20 h-20 mx-auto mb-4 rounded-full overflow-hidden shadow-xl border-4 border-white bg-gradient-to-br from-red-600 to-red-700 flex items-center justify-center"
             >
-              <img
-                src="./assets/images/logo.png"
-                alt="Mag'zuna Logo"
-                class="w-full h-full object-cover"
-              />
+              <span class="text-white text-3xl font-black tracking-tight"
+                >MC</span
+              >
             </div>
             <h1 class="text-2xl font-bold text-gray-900">Admin Panel</h1>
             <p class="text-gray-500 mt-2">Mag'zuna Consult boshqaruv tizimi</p>
@@ -177,11 +175,13 @@
             <div class="relative">
               <div
                 id="adminAvatar"
-                class="w-11 h-11 rounded-full overflow-hidden border-2 border-red-500 shadow-lg bg-gradient-to-br from-red-500 to-red-700 flex items-center justify-center"
+                class="w-11 h-11 rounded-full overflow-hidden border-2 border-red-500 shadow-lg"
               >
-                <span id="adminInitials" class="text-white font-bold text-sm"
-                  >AD</span
-                >
+                <img
+                  src="./assets/images/admin.png"
+                  alt="Admin"
+                  class="w-full h-full object-cover"
+                />
               </div>
               <span
                 class="absolute bottom-0 right-0 w-3 h-3 bg-green-500 border-2 border-gray-900 rounded-full"
@@ -250,13 +250,14 @@
               class="hidden md:flex items-center gap-2 pl-3 border-l border-gray-200"
             >
               <div
-                class="w-8 h-8 rounded-full bg-gradient-to-br from-red-500 to-red-700 flex items-center justify-center"
+                class="w-8 h-8 rounded-full overflow-hidden border-2 border-red-500"
               >
-                <span
-                  id="headerAdminInitials"
-                  class="text-white text-xs font-bold"
-                  >AD</span
-                >
+                <img
+                  id="headerAdminAvatar"
+                  src="./assets/images/admin.png"
+                  alt="Admin"
+                  class="w-full h-full object-cover"
+                />
               </div>
               <span
                 id="headerAdminName"
