--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,14 +17,14 @@
     <title>Mag'zuna | Consult</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/logo.png"
+      href="./assets/images/favicon.svg"
     />
-    <link rel="apple-touch-icon" href="./assets/images/logo.png" />
+    <link rel="apple-touch-icon" href="./assets/images/favicon.svg" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
