Improve auth system with validation, translations and logged-in UI

--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel - Mag'zuna Consult</title>
-    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg" />
-    <link rel="apple-touch-icon" href="./assets/images/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg" />
+    <link rel="apple-touch-icon" href="../assets/images/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="./assets/css/admin.css" />
+    <link rel="stylesheet" href="../assets/css/admin.css" />
   </head>
   <body class="bg-gray-50 min-h-screen">
     <!-- Login Modal -->
@@ -103,7 +103,7 @@
 
           <div class="mt-8 text-center">
             <a
-              href="./index.html"
+              href="../"
               class="inline-flex items-center gap-2 text-gray-500 hover:text-red-600 transition text-sm font-medium"
             >
               <i class="fas fa-arrow-left"></i>Bosh sahifaga qaytish
@@ -122,12 +122,12 @@
       >
         <!-- Logo -->
         <div class="p-6 border-b border-gray-700/50">
-          <a href="./index.html" class="flex items-center gap-3 group">
+          <a href="../" class="flex items-center gap-3 group">
             <div
               class="w-12 h-12 rounded-xl overflow-hidden shadow-lg border-2 border-white/20 group-hover:border-red-500 transition-all duration-300 bg-white"
             >
               <img
-                src="./assets/images/logo.png"
+                src="../assets/images/logo.png"
                 alt="Mag'zuna Logo"
                 class="w-full h-full object-cover"
               />
@@ -178,7 +178,7 @@
                 class="w-11 h-11 rounded-full overflow-hidden border-2 border-red-500 shadow-lg"
               >
                 <img
-                  src="./assets/images/admin.png"
+                  src="../assets/images/admin.png"
                   alt="Admin"
                   class="w-full h-full object-cover"
                 />
@@ -254,7 +254,7 @@
               >
                 <img
                   id="headerAdminAvatar"
-                  src="./assets/images/admin.png"
+                  src="../assets/images/admin.png"
                   alt="Admin"
                   class="w-full h-full object-cover"
                 />
@@ -852,6 +852,6 @@
       </div>
     </div>
 
-    <script src="./assets/js/admin.js"></script>
+    <script src="../assets/js/admin.js"></script>
   </body>
 </html>
